# pacman-repo-tools

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: alpm.rs  error.rs  lib.rs  macros.rs  msg.rs  package.rs  parse.rs  srcinfo.rs  string_tracker.rs  util.rs  version.rs
src/alpm/: deserializer.rs  mod.rs
src/db/: deserializer.rs  mod.rs
src/version/: compare.rs  mod.rs  parse.rs  types.rs
tests/database-package/: depends  desc
